# openapi-schemas-pydantic

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject copy.toml  pyproject.toml
.github/ISSUE_TEMPLATE/: 1-issue.md  config.yml
.github/workflows/: publish.yml  test-suite.yml
docs/: contributing.md  index.md  release-notes.md
openapi_schemas_pydantic/: __init__.py
openapi_schemas_pydantic/utils/: constants.py  utils.py
openapi_schemas_pydantic/v3_1_0/: __init__.py  callback.py  components.py  contact.py  encoding.py  example.py  external_documentation.py  header.py  info.py  license.py  link.py  media_type.py  oauth_flow.py  oauth_flows.py  open_api.py  operation.py  parameter.py  path_item.py  reference.py  request_body.py  response.py  schema.py  security_scheme.py  server.py  server_variable.py  tag.py  xml.py
scripts/: clean  format  install  lint  release  test
tests/v3_1_0/: test_alias.py  test_config_example.py  test_empty_schema.py  test_example.py  test_pydantic_field.py  test_schema.py  test_security_scheme.py  test_swagger_openapi_v3.py  test_util.py
